--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "grunt": "~1.0.1",
-    "grunt-sass": "~1.0.0",
-    "grunt-contrib-watch": "~1.0.0"
-	}
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-sass": "~1.0.0"
+  }
 }
